--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "config": "^3.3.9",
     "express": "^4.18.2",
-    "mongoose": "^7.4.3"
+    "mongoose": "^7.4.3",
+    "mongoose-unique-validator": "^4.0.0"
   }
 }
