--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.9",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.3",
     "mongoose-unique-validator": "^4.0.0"
